BoaUAT/src/objects/Pricing_Policy_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Mins__c</fullName>
        <formula>(Now()-LastModifiedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Quantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Policy_Rule_Name__c</fullName>
        <label>Pricing Policy Rule Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Policy</label>
        <referenceTo>Pricing_Policy__c</referenceTo>
        <relationshipLabel>Pricing Policy Rule</relationshipLabel>
        <relationshipName>Pricing_Policy_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_Price_Band__c</fullName>
        <label>Sell Price Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StockCodeName__c</fullName>
        <formula>StockCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StockCodeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StockCode</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Policy Rule</relationshipLabel>
        <relationshipName>Pricing_Policy_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Code__c</fullName>
        <label>Stock Code</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Price_Group__c</fullName>
        <label>Stock Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>320</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>388</fullName>
                </value>
                <value>
                    <fullName>370</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>382</fullName>
                </value>
                <value>
                    <fullName>53</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>396</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>DateTime</type>
    </fields>
    <label>Pricing Policy Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stock_Code__c</columns>
        <columns>Discount__c</columns>
        <columns>Price__c</columns>
        <columns>Stock_Price_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR{0000}</displayFormat>
        <label>Pricing Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Policy Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Can_select_stock_code_or_Price_group</fullName>
        <active>true</active>
        <description>User can either select stock code or price group.</description>
        <errorConditionFormula>NOT(ISBLANK( StockCode__c ))  &amp;&amp;  NOT(ISPICKVAL(Stock_Price_Group__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>You can select either of stock code or stock price group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Discount__c &lt;= 100, Discount__c &lt; 0)</errorConditionFormula>
        <errorMessage>Discount should not less than 0 and should not greater than 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_or_Discount_should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Price__c)),NOT(ISBLANK(Discount__c)))</errorConditionFormula>
        <errorMessage>You can either enter Price or Discount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pricing_Policy_Rule_Date_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Stop_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>Stop date must be greater than start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_should_not_less_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE( Start_Date__c ) &lt; TODAY()</errorConditionFormula>
        <errorMessage>Start date must be greater than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stock_Price_Group_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  NOT(ISBLANK(TEXT( Stock_Price_Group__c ))),
  ISBLANK(  Discount__c )
)</errorConditionFormula>
        <errorMessage>If stock price group is selected, please enter discount. Do not enter price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>select_stockcode_or_stockpricegroup</fullName>
        <active>true</active>
        <description>NOT(ISBLANK( StockCode__c )) &amp;&amp; NOT(ISPICKVAL(Stock_Price_Group__c,&quot;&quot;))</description>
        <errorConditionFormula>(ISBLANK( StockCode__c )) &amp;&amp; 
(ISPICKVAL(Stock_Price_Group__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>Select either stock code or stock price group</errorMessage>
    </validationRules>
</CustomObject>